--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,13 @@ dependencies = [
   "jinja2 (>=3.1.6)",
   "ipympl",
   "icecream",
-  "streamlit"
+  "streamlit",
+  "beautifulsoup4",
+  "requests",
+  "google-api-python-client",
+  "google-api-core",
+  "google-auth-httplib2",
+  "google-auth-oauthlib",
 ]
 
 [build-system]
