--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ openpyxl
 ipympl
 icecream
 streamlit
+beautifulsoup4
+requests
+google-api-python-client
+google-api-core
+google-auth-httplib2
+google-auth-oauthlib
