--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
   "google-api-core",
   "google-auth-httplib2",
   "google-auth-oauthlib",
+  "nltk (>=3.9.1,<4.0.0)",
+  "emoji (>=2.14.1,<3.0.0)",
 ]
 
 [build-system]
