--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ dependencies = [
   "google-auth-oauthlib",
   "nltk (>=3.9.1,<4.0.0)",
   "emoji (>=2.14.1,<3.0.0)",
+  "wordcloud (>=1.9.4,<2.0.0)",
+  "pyLDAvis",
+  "nrclex"
 ]
 
 [build-system]
